# demo-test

./: .gitconfig  .npmrc  pyproject.toml
backup/: gitignore
