[project]
name = "z-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # ===== 原有核心包 =====
    "aiohttp==3.13.3",
    "fastmcp==2.14.3",
    "loguru==0.7.3",
    "ripgrepy==2.2.0",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "scipy==1.14.1",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "playwright==1.57.0",
    "beautifulsoup4==4.14.3",
    "lxml==6.0.2",
    "html5lib==1.1",
    "Pillow==11.3.0",
    "opencv-python-headless==4.13.0.90",
    "ffmpeg-python==0.2.0",
    "moviepy==2.2.1",
    "pydub==0.25.1",
    "openpyxl==3.1.5",
    "xlrd==2.0.2",
    "xlwt==1.3.0",
    "python-docx==1.2.0",
    "python-pptx==1.0.2",
    "pdfplumber==0.11.9",
    "PyPDF2==3.0.1",
    "pypdf==6.6.0",
    "reportlab==4.4.9",
    "mammoth==1.11.0",
    "defusedxml==0.7.1",
    "pandoc==2.4",
    "alibabacloud-oss-v2==1.2.2",
    "alibabacloud-fc20230330==4.6.7",
    "alibabacloud-polardb20170801==6.5.0",

    # ===== Jupyter Ecosystem =====
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "jupyter-server==2.17.0",
    "jupyterlab==4.5.2",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.28.0",
    "notebook==7.5.2",

    # ===== Web Frameworks =====
    "hypercorn==0.18.0",
    "fastapi==0.128.0",
    "websockets==16.0",
    "pydantic==2.12.5",
    "gradio==6.3.0",

    # ===== 数据处理补充 =====
    "numpy-financial==1.0.0",
    "matplotlib-venn==1.1.2",
    "plotly==6.5.2",
    "plotnine==0.15.2",
    "bokeh==3.8.2",

    # ===== Statistics & Machine Learning =====
    "statsmodels==0.14.5",
    "scikit-learn==1.5.2",
    "scikit-image==0.24.0",
    "xgboost==2.1.3",
    "catboost==1.2.8",
    "lightgbm==4.5.0",
    "imbalanced-learn==0.12.4",

    # ===== NLP =====
    "nltk==3.9.2",
    "gensim==4.4.0",
    "spacy==3.8.11",
    "textblob==0.19.0",

    # ===== 网页处理补充 =====
    "requests==2.32.5",

    # ===== 图像处理补充 =====
    "pytesseract==0.3.13",
    "qrcode==8.2",
    "pyzbar==0.1.9",
    "imgkit==1.2.3",

    # ===== 音视频处理补充 =====
    "soundfile==0.13.1",
    "librosa==0.10.2.post1",
    "numba==0.61.0",  # 支持 Python 3.12
    "mutagen==1.47.0",
    "gtts==2.5.4",
    "pyttsx3==2.99",
    "pedalboard==0.9.21",
    "pyloudnorm==0.2.0",
    "mne==1.11.0",

    # ===== Office 文档补充 =====
    "odfpy==1.4.1",
    "pyxlsb==1.0.10",

    # ===== PDF 处理补充 =====
    "PyMuPDF==1.26.7",
    "pdf2image==1.17.0",
    "pdfkit==1.0.0",
    "fpdf2==2.8.5",
    "weasyprint==68.0",
    "pdfrw==0.4",

    # ===== 其他文档处理补充 =====
    "pypandoc==1.16.2",
    "docx2txt==0.9",
    "tabula-py==2.10.0",
    "camelot-py==0.11.0",

    # ===== Graphics & Visualization =====
    "graphviz==0.21",
    "pydot==4.0.1",
    "networkx==3.6.1",
    "svglib==1.6.0",
    "svgwrite==1.4.3",
    "cairosvg==2.8.2",
    "trimesh==4.11.1",
    "wordcloud==1.9.6",
    "folium==0.20.0",

    # ===== Geospatial =====
    "shapely==2.1.2",
    "fiona==1.10.1",
    "geopandas==1.1.2",
    "geopy==2.4.1",
    "rasterio==1.5.0",

    # ===== Scientific Computing =====
    "sympy==1.14.0",
    "h5py==3.15.1",
    "tables==3.10.2",

    # ===== 3D & CAD =====
    "cadquery==2.6.1",

    # ===== Chemistry & Biology =====
    "biopython==1.86",

    # ===== Data Utilities =====
    "markdownify==1.2.2",
    "anytree==2.13.0",
    "rarfile==4.2",
    "chardet==5.2.0",
    "srt==3.5.3",

    # ===== General Utilities =====
    "tqdm==4.67.1",
    "tabulate==0.9.0",
    "faker==40.1.2",
    "fuzzywuzzy==0.18.0",
    "rapidfuzz==3.14.3",
    "einops==0.8.1",
    "pycountry==24.6.1",
    "countryinfo==0.1.2",
    "pronouncing==0.2.0",
    "kerykeion==5.6.3",
    "exchange-calendars==4.12",

    # ===== Math & Logic =====
    "nashpy==0.0.43",

    # ===== Semantic Web =====
    "rdflib==7.5.0",

    # ===== Security & Networking =====
    "cryptography==44.0.3",
    "pyopenssl==25.1.0",

    # ===== Database Connectors =====
    "snowflake-connector-python==4.2.0",
    "databricks-sql-connector==4.2.4",

    # ===== Testing & Monitoring =====
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-json-report==1.5.0",
    "coverage==7.13.1",
    "pytest-asyncio==1.3.0",
    "ddtrace==4.2.2",
    "datadog==0.52.1",

    # ===== Document Generation =====
    "aspose-words==26.1.0",

    # ===== Other =====
    "typing-extensions==4.15.0",
    "pyth3==0.7",
]

[project.scripts]
zai = "app.main:main"

[tool.uv.sources]
ripgrepy = { git = "https://github.com/callmemhz/ripgrepy", branch = "master" }
